fix the thingy alignment

--- a/sass/uhd.global.styles.scss
+++ b/sass/uhd.global.styles.scss
@@ -268,7 +268,7 @@ var {
 
     h2#org-title {
       float: left;
-      margin: 8px;
+      margin: 8px 0 0 8px;
       text-transform: uppercase;
     }
   }
